--- a/gateway-add.html
+++ b/gateway-add.html
@@ -65,8 +65,18 @@
             transition: background-color 0.2s;
         }
 
+        .cognito-login-btn {
+            background-color: #FF9900;
+            margin-top: 10px;
+            display: block;
+        }
+
         button:hover {
             background-color: #0056b3;
+        }
+
+        .cognito-login-btn:hover {
+            background-color: #cc7a00;
         }
     </style>
 </head>
@@ -75,7 +85,7 @@
 
     <div class="container">
         <h2>Gateway Configuration</h2>
-        <p>Please enter the address of your dedicated gateway below. Our system will configure the analytics proxy gateway to operate with your provider.</p>
+        <p>Please enter the address of your dedicated gateway below. Our system will configure the analytics proxy gateway on top of it.</p>
 
         <div class="supported-note">
             <strong>Supported Gateways:</strong> Fleek.io and Spheron.network
@@ -86,6 +96,9 @@
             <input type="text" id="gateway-address" name="gateway_address" required>
             <button type="submit">Submit</button>
         </form>
+
+        <!-- AWS Cognito Login Button -->
+        <a href="https://YOUR_DOMAIN_NAME.auth.REGION.amazoncognito.com/login?response_type=token&client_id=YOUR_APP_CLIENT_ID&redirect_uri=YOUR_CALLBACK_URL" class="cognito-login-btn">Login to Leto</a>
     </div>
 
 </body>
