coloring for button- ties to leto

--- a/gateway-add.html
+++ b/gateway-add.html
@@ -89,7 +89,7 @@
         }
 
         .cognito-login-btn:hover {
-            background-color: #cc7a00;
+            background-color: #e4cd4e;
         }
     </style>
 </head>
