dual color stying

--- a/gateway-add.html
+++ b/gateway-add.html
@@ -72,7 +72,7 @@
         }
 
         .cognito-login-btn {
-            background-color: #FF9900;
+            background-color: #d9c553;
             margin-top: 10px;
             display: inline-block;
             color: white;
@@ -89,7 +89,7 @@
         }
 
         .cognito-login-btn:hover {
-            background-color: #e4cd4e;
+            background-color: #cda347;
         }
     </style>
 </head>
