notes on providers

--- a/gateway-add.html
+++ b/gateway-add.html
@@ -98,7 +98,7 @@
 
     <div class="container">
         <h2>Dedicated Gateway Configuration</h2>
-        <p>Login using your account and enter the address of your dedicated gateway below. Our system will configure the analytics proxy gateway on top of it.</p>
+        <p>Login using your account and enter the address of your dedicated gateway below. Our system will configure the analytics proxy gateway to operate with your provider.</p>
         <a href="https://YOUR_DOMAIN_NAME.auth.REGION.amazoncognito.com/login?response_type=token&client_id=YOUR_APP_CLIENT_ID&redirect_uri=YOUR_CALLBACK_URL" class="cognito-login-btn">Login to Leto</a>
 
         <div class="supported-note">
