login address corrected

--- a/gateway-add.html
+++ b/gateway-add.html
@@ -99,7 +99,7 @@
     <div class="container">
         <h2>Dedicated Gateway Configuration</h2>
         <p>Login using your account and enter the address of your dedicated gateway below. Our system will configure the analytics proxy gateway to operate with your provider.</p>
-        <a href="https://YOUR_DOMAIN_NAME.auth.REGION.amazoncognito.com/login?response_type=token&client_id=YOUR_APP_CLIENT_ID&redirect_uri=YOUR_CALLBACK_URL" class="cognito-login-btn">Login to Leto</a>
+        <a href="https://leto.auth.us-east-1.amazoncognito.com/login?client_id=7rnajbnph8l91gaba84l3pltep&response_type=code&scope=email+openid+phone&redirect_uri=https%3A%2F%2Fapi.leto.gg%2Fauth%2Fcallback" class="cognito-login-btn">Login to Leto</a>
 
         <div class="supported-note">
             <strong>Supported Gateways:</strong> Fleek.io and Spheron.network
