--- a/gateway-add.html
+++ b/gateway-add.html
@@ -106,8 +106,8 @@
         </div>
 
         <form action="YOUR_BACKEND_ENDPOINT_HERE" method="post">
-            <label for="gateway-address">Gateway Address:</label>
-            <input type="text" id="gateway-address" name="gateway_address" required>
+            <label for="gatewayaddr">Gateway Address:</label>
+            <input type="text" id="gatewayaddr" name="gateway_address" required>
             <button type="submit">Submit</button>
         </form>
     </div>
