--- a/gateway-add.html
+++ b/gateway-add.html
@@ -106,9 +106,10 @@
         </div>
 
         <form action="YOUR_BACKEND_ENDPOINT_HERE" method="post">
-            <label for="gatewayaddr">Gateway Address:</label>
-            <input type="text" id="gatewayaddr" name="gateway_address" required>
+            <label for="gatewayAddr">Gateway Address:</label>
+            <input type="text" id="gatewayAddr" name="gateway_address" required>
             <button type="submit">Submit</button>
+            <script src="script.js"></script>
         </form>
     </div>
 
